# HyperSocket

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.jsonc  server.custom.ts  server.oak.ts  server.ts  tsconfig.json
client/: .gitignore  lib.ts  tojs.js
docs/: SPEC.md
example/: app.js  client.js  index.html  server.js  server.ts
examples/: README.md
examples/axum-chat/: Cargo.toml  server.rs  sessions.rs
examples/axum-chat/static/: client.js  index.html  style.core.css  style.css
examples/axum-chat/stupiddb/: mod.rs  users.stupid.db
examples/rocket-chat/: .gitignore  Cargo.toml  Rocket.toml  server.rs  sessions.rs
examples/rocket-chat/static/: client.js  index.html  style.css
examples/rocket-chat/stupiddb/: mod.rs
hypersocket/client/: client.cjs  client.js  client.mjs  lib.ts
hypersocket/server/: common.ts  impl.ts  mod.ts  types.ts
impls/: README.md
impls/client/: .gitignore  README.md
impls/client/js/: lib.js
impls/client/ts/: lib.ts  tojs.js
impls/server/: README.md
impls/server/rust/: Cargo.toml  inner.rs  lib.rs  middleware.rs
impls/server/rust/middleware/rocket/: duplex.rs  mod.rs  websocket.rs
server/: lib.rs  safety.ts
server/base/: Cargo.toml  lib.rs  prelude.rs
server/macros/: Cargo.toml  lib.rs
server/macros/packet/: config.rs  mod.rs
