[workspace]
resolver = "2"
members = [
    "./server/base",
    "./server/macros",
    "."
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = [
    "Матвей Т <https://matveit.dev> AtomicGamer9523@github"
]

[package]
name = "hypersocket"
description = "Websockets, blazingly fast :)"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
path = "server/lib.rs"

[dependencies.base]
path = "./server/base"

[dependencies.macros]
path = "./server/macros"
optional = true

[features]
default = ["macros"]

macros = ["dep:macros"]
