[package]
name = "macros"
description = "Macros to make life easier"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies.base]
path = "../base"

[dependencies]
syn = { version = "2.0.41", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
