[package]
name = "hypersocket"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

# Core Dependencies
[dependencies.ws]
package = "tokio-tungstenite"
version = "0.21"

[dependencies.tokio]
version = "1.35"

# Optional Dependencies
[dependencies.rocket]
version = "0.5"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

[features]
impl-rocket = ["dep:rocket"]
impl-axum = ["dep:axum"]

tls-native = ["ws/native-tls"]
tls-native-vendored = ["ws/native-tls-vendored"]
tls-rustls-native-roots = ["ws/rustls-tls-native-roots"]
tls-rustls-webpki-roots = ["ws/rustls-tls-webpki-roots"]
